<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:id="@+id/neomorphFrameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:neomorph_background_color="@color/dark"
        app:neomorph_corner_radius="@dimen/neomorph_view_corner_radius"
        app:neomorph_elevation="6dp"
        app:neomorph_highlight_color="@color/neomorph_highlight_color"
        app:neomorph_layer_type="hardware"
        app:neomorph_shadow_color="@color/neomorph_shadow_color"
        app:neomorph_shadow_type="outer"
        app:neomorph_view_type="circular">

        <ImageButton
            android:id="@+id/btnDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:backgroundTint="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_calendar_today_white_24dp" />

    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:id="@+id/neomorphFrameLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/neomorphFrameLayout"
        app:layout_constraintEnd_toStartOf="@+id/neomorphFrameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/neomorphFrameLayout"
        app:neomorph_background_color="@color/background"
        app:neomorph_corner_radius="20dp"
        app:neomorph_elevation="6dp"
        app:neomorph_highlight_color="@color/neomorph_highlight_color"
        app:neomorph_layer_type="hardware"
        app:neomorph_shadow_color="@color/neomorph_shadow_color"
        app:neomorph_shadow_type="inner"
        app:neomorph_view_type="rectangular">

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/title_for_day"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:id="@+id/neomorphFrameLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neomorphFrameLayout2"
        app:neomorph_background_color="@color/background"
        app:neomorph_corner_radius="@dimen/neomorph_view_corner_radius"
        app:neomorph_elevation="6dp"
        app:neomorph_highlight_color="@color/neomorph_highlight_color"
        app:neomorph_layer_type="hardware"
        app:neomorph_shadow_color="@color/neomorph_shadow_color"
        app:neomorph_shadow_type="inner"
        app:neomorph_view_type="rectangular">

        <EditText
            android:id="@+id/txtParagraph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@null"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/dear_diary"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:neomorph_background_color="@color/dark"
        app:neomorph_corner_radius="@dimen/neomorph_view_corner_radius"
        app:neomorph_elevation="6dp"
        app:neomorph_highlight_color="@color/neomorph_highlight_color"
        app:neomorph_layer_type="hardware"
        app:neomorph_shadow_color="@color/neomorph_shadow_color"
        app:neomorph_shadow_type="outer"
        app:neomorph_view_type="circular">

        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/save"
            android:tint="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_done_white_48dp" />
    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/txtDate"-->
    <!--        android:layout_width="104dp"-->
    <!--        android:layout_height="17dp"-->
    <!--        android:layout_marginStart="28dp"-->
    <!--        android:fontFamily="sans-serif-light"-->
    <!--        android:textColor="@color/dark"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/neomorphFrameLayout2" />-->

</androidx.constraintlayout.widget.ConstraintLayout>